# MPI

./: .gitignore  AWSAgent.cpp  AWSAgent.h  Functions.cpp  Functions.h  Makefile  aws_agents.cpp  csv.cpp  csv.h  main.cpp  mpi_routines.cpp  mpiroutines.cpp  mpiroutines.h
aws_cmake_example/: CMakeCache.txt  CMakeLists.txt  hello_aws.cpp
cmake_example/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake.cpp  cmake_install.cmake  hello
